test/scc/decl/semantic-errors/083.a
083.t:1:10: error: '_Dllimport' specifier allowed on function or variable declarations only